mandaça de arquivos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="../imagens/pokebola.png" alt="pokebola" class="pokebola">
+        <img src="imagens/pokebola.png" alt="pokebola" class="pokebola">
         <h1>MapaDev Week</h1>
     </header>
 
