--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="files/imagens/pokebola.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaQuery.css">
+    <link rel="stylesheet" href="files/css/style.css">
+    <link rel="stylesheet" href="files/css/mediaQuery.css">
     <title>Projeto Pokémon Slider</title>
 </head>
 
