--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
     <header>
-        <img src="files/imagens/pokebola.png" alt="pokebola" class="pokebola">
+        <img src="files/images/pokebola.png" alt="pokebola" class="pokebola">
         <h1>MapaDev Week</h1>
     </header>
 
     <main>
         <button class="btn-seta">
-            <img src="files/imagens/seta.png" alt="seta voltar" class="button-voltar">
+            <img src="files/images/seta.png" alt="seta voltar" class="button-voltar">
         </button>
 
         <ul class="cards">
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="img">
-                    <img src="files/imagens/pikachu.png" alt="pikachu" class="img-pokemon">
+                    <img src="files/images/pikachu.png" alt="pikachu" class="img-pokemon">
                 </div>
                 <div class="description">
                     <h3>Descrição</h3>
@@ -46,7 +46,7 @@
                     <p class="hp">HP 800</p>
                 </div>
                 <div class="img">
-                    <img src="files/imagens/charizard.png" alt="charizard" class="img-pokemon">
+                    <img src="files/images/charizard.png" alt="charizard" class="img-pokemon">
                 </div>
                 <div class="description">
                     <h3>Descrição</h3>
@@ -62,7 +62,7 @@
                     <p class="hp">HP 1200</p>
                 </div>
                 <div class="img">
-                    <img src="files/imagens/mewtwo.png" alt="mewtwo" class="img-pokemon">
+                    <img src="files/images/mewtwo.png" alt="mewtwo" class="img-pokemon">
                 </div>
                 <div class="description">
                     <h3>Descrição</h3>
@@ -73,7 +73,7 @@
             </li>
         </ul>
         <button class="btn-seta">
-            <img src="files/imagens/seta.png" alt="seta avançar">
+            <img src="files/images/seta.png" alt="seta avançar">
         </button>
     </main>
 </body>
