--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="files/imagens/pokebola.png" type="image/x-icon">
     <link rel="stylesheet" href="files/css/style.css">
     <link rel="stylesheet" href="files/css/mediaQuery.css">
+    <script src="files/js/index.js"></script>
     <title>Projeto Pokémon Slider</title>
 </head>
 
