function adicionado na seta avançar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </li>
         </ul>
-        <button class="btn-seta">
+        <button class="btn-seta"  onclick="forwardButton()">
             <img src="files/images/seta.png" alt="seta avançar">
         </button>
     </main>
