adicionei classes nos botoẽs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <button class="btn-seta">
+        <button class="btn-seta btnVoltar">
             <img src="files/images/seta.png" alt="seta voltar" class="button-voltar">
         </button>
 
@@ -73,7 +73,7 @@
                 </div>
             </li>
         </ul>
-        <button class="btn-seta"  onclick="forwardButton()">
+        <button class="btn-seta btnAvancar"  onclick="forwardButton()">
             <img src="files/images/seta.png" alt="seta avançar">
         </button>
     </main>
