função do botão voltar atribuído no HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <button class="btn-seta btnVoltar">
+        <button class="btn-seta btnVoltar" onclick="backButton()">
             <img src="files/images/seta.png" alt="seta voltar" class="button-voltar">
         </button>
 
